<resources>
    <string name="app_name">Pills Reminder</string>
    <string name="foto">Scatta foto</string>
    <string name="galleria">Scegli da galleria</string>
    <string name="non_support_speechapi">Ci dispiace, il tuo dispositivo non supporta il riconoscimento vocale</string>
    <string name="date_format_base">yyyy-MM-dd</string>
    <string name="notify_date_format">yyyy-MM-dd HH:mm</string>
    <string name="picture_date_format">yyyyMMddHHmmss</string>
    <string name="user_date_format">dd-MM-yyyy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scatta_fotocamera">Scatta foto</string>
    <string name="scatta_galleria">Scegli da galleria</string>
    <string name="photo_from_camera">Scatta foto</string>
    <string name="photo_from_gallery">Scegli da galleria</string>
    <string name="nav_title_home">Cure</string>
    <string name="nav_title_pills">I miei farmaci</string>
    <string name="nav_title_calendar">Calendario</string>
    <string name="nav_title_pharamarcy">Trova farmacie</string>
    <string name="nav_title_contacts">Contatti importanti</string>
    <string name="nav_title_sms">SMS AVVISO</string>
    <string name="nav_title_notes">Note</string>
    <string name="nav_title_settings">Impostazioni</string>
    <string name="pillola">Pillola</string>
    <string name="compressa">Compressa</string>
    <string name="f_generico">Farmaco Generico</string>
    <string name="iniezione">Iniezione</string>
    <string name="gocce">Gocce</string>
    <string name="sciroppo">Sciroppo</string>
    <string name="supposta">Supposta</string>
    <string name="pomata">Pomata</string>
    <string name="spray">Spray</string>
    <string name="titolo_sceglipillola">Scegli il tipo di farmaco</string>
    <string name="titolo_aggiungicontatto">Aggiungi contatto</string>
    <string name="titolo_aggiunginota">Aggiungi nota</string>
    <string name="titolo_aggiungifarmaco">Aggiungi farmaco</string>
    <string name="titolo_calendario">Calendario</string>
    <string name="titolo_contattiimportanti">Contatti importanti</string>
    <string name="titolo_cure">Cure</string>
    <string name="titolo_impostazioni">Impostazioni</string>
    <string name="titolo_infofarmaco">Info Farmaco</string>
    <string name="titolo_mieifarmaci">I miei farmaci</string>
    <string name="titolo_modificacontatto">Modifica Contatto</string>
    <string name="titolo_modificanota">Modifica Nota</string>
    <string name="titolo_note">Note</string>
    <string name="titolo_smsavviso">SMS Avviso</string>
    <string name="titolo_modificapillola">Modifica Farmaco</string>
    <string name="titolo_dati_personali">Dati Personali</string>
    <string name="foto_pillola">Foto della Cura</string>
    <string name="nome_cura">Nome della Cura</string>
    <string name="hint_nome_cura">Nome...</string>
    <string name="scorte_farmaco">Scorte di Medicinali</string>
    <string name="qta_corrente">Quantità nella confezione</string>
    <string name="qta_scatola">Quantità rimasta</string>
    <string name="dose_1">Dosaggio</string>
    <string name="dose_2">Secondo Dosaggio</string>
    <string name="dose_3">Terzo Dosaggio</string>
    <string name="num_dose">Numero:</string>
    <string name="ora_dose">Ora:</string>
    <string-array name="pill_units">
        <item>mg</item>
        <item>gr</item>
        <item>cc</item>
        <item>ml</item>
        <item>gocce</item>
        <item>cucchiai</item>
        <item>unità</item>
    </string-array>
    <string name="dosiorario_txt">Clicca qui per aggiungere ulteriori dosaggi alla tua cura (max 3)</string>
    <string name="periodo_assunzione">Periodo di assunzione</string>
    <string name="init_periodo_ass">Dal</string>
    <string name="end_periodo_ass">Al</string>
    <string name="ripetizione_assunzione">Intervallo di Ripetizione</string>
    <string name="radio_ripeti">Ripeti</string>
    <string name="radio_content_start">Ogni</string>
    <string name="radio_content_hint">numero giorni...</string>
    <string name="radio_content_end">giorni</string>
    <string name="radio_settimana">Giorni della Settimana</string>
    <string name="btn_lun">LUN</string>
    <string name="btn_mar">MAR</string>
    <string name="btn_mer">MER</string>
    <string name="btn_gio">GIO</string>
    <string name="btn_ven">VEN</string>
    <string name="btn_sab">SAB</string>
    <string name="btn_dom">DOM</string>
    <string name="sms_testata">Servizio SMS AVVISO</string>
    <string name="check_sms">Aggiungi al servizio SMS AVVISO</string>
    <string name="btn_conferma">Conferma</string>
    <string name="imp_notifiche">ImpostazioniNotifiche</string>
    <string name="imp_not_farmaci">imposta_notifiche_farmaci</string>
    <string name="imp_not_scorta">imposta_notifiche_scorta_app</string>
    <string name="pillole_scorta">pillole_scorta</string>
    <string name="pill_2">2 pillole</string>
    <string name="pill_5">5 pillole</string>
    <string name="pill_10">10 pillole</string>
    <string name="pill_15">15 pillole</string>
    <string name="pill_20">20 pillole</string>
    <string name="pill_30">30 pillole</string>
    <string name="pref_name">MyNotifPref</string>
    <string name="pref_content">contenuto</string>
    <string name="pref_req_code">req_code</string>
    <string name="pref_key">key</string>
    <string name="pref_cura_record">cura</string>
    <string name="importa_contatto">Importa nome e telefono da contatto</string>
    <string name="cont_nome">Nome del contatto</string>
    <string name="cont_nome_hint">"Nome..."</string>
    <string name="cont_relazione">Relazione (ad esempio medico, figlia, ecc...)</string>
    <string name="cont_relazione_hint">Relazione...</string>
    <string name="cont_num">Numero di telefono</string>
    <string name="cont_num_hint">Numero...</string>
    <string name="setta_contatto_SMSAVVISO">Imposta questo contatto per SMS AVVISO</string>
    <string name="cont_btn_conferma">CONFERMA</string>
    <string name="nota_titolo_hint">Inserisci il titolo...</string>
    <string name="nota_testo_hint">Inserisci il testo della nota...</string>
    <string name="nota_categoria">Scegli la categoria della nota</string>
    <string name="nota_radio_general">Generale</string>
    <string name="nota_radio_sintomi">Sintomi</string>
    <string name="nota_radio_appuntamento">Appuntamento</string>
    <string name="nota_radio_promemoria">Promemoria</string>
    <string name="nota_check_data_ora">Inserisci data e ora per questa nota</string>
    <string name="nota_data_ora">Imposta data e orario</string>
    <string name="nota_scelta_giorno">Giorno:</string>
    <string name="nota_scelta_ora">Ora:</string>
    <string name="nota_btn_conferma">Conferma</string>
    <string name="nota_pref_name">ImpostazioniNotifiche</string>
    <string name="nota_pref_key">imposta_notifiche_note</string>
    <string name="nota_pref_notify">iMyNotifPref</string>
    <string name="nota_pref_notify2">MyNotifPref</string>
    <string name="nota_bundle_titolo_cont">contenuto</string>
    <string name="nota_bundle_req">req_code</string>
    <string name="nota_bundle_key">key</string>
    <string name="nota_bundle_title">titolo_nota</string>
    <string name="nota_bundle_content">contenuto_nota</string>
    <string name="nota_bundle_data">data_nota</string>
    <string name="nota_bundle_ora">orario_nota</string>
    <string name="nota_bundle_type">tipo_nota</string>
    <string name="conferma_farmaco">Conferma assunzione farmaco</string>
    <string name="nonconferma_farmaco">Farmaco non assunto</string>
    <string name="posticipa_farmaco">Annulla</string>
    <string name="info_farmaco">Info farmaco</string>
    <string name="foto_farmaco">Foto farmaco</string>
    <string name="slide_5_title">Contratto per la privacy</string>
    <string name="slide_5_desc">Consenti al trattamento dei tuoi dati medici</string>
    <string name="informativa_privacy">
Lo scopo del presente documento è di informare gli Utenti relativamente ai Dati Personali raccolti
dall\'applicazione Pills Reminder (di seguito "Applicazione").
Il Titolare del Trattamento, come successivamente identificato, potrà modificare o semplicemente
aggiornare, in tutto o in parte, la presente Informativa dandone informazione agli Utenti. Le modifiche e gli
aggiornamenti saranno vincolanti non appena pubblicati sull\'Applicazione. L‘Utente è pertanto invitato a
leggere l\'Informativa Privacy ad ogni accesso all\'Applicazione.
Nel caso di mancata accettazione delle modifiche apportate alla presente Informativa Privacy, l\'Utente è
tenuto a cessare l\’utilizzo di questa Applicazione e può richiedere al Titolare del Trattamento di rimuovere i
propri Dati Personali. \n <br />
        1. Dati Personali raccolti dall\'Applicazione \n <br />

Il Titolare raccoglie le seguenti tipologie di Dati Personali: \n <br />

A. Contenuti e informazioni forniti volontariamente dall\'Utente \n <br />

I Dati di contatto, credenziali, contenuti: per esempio dati anagrafici, indirizzo di posta
elettronica o postale e altri dati di contatto, password e informazioni di sicurezza utilizzati per
l\'autenticazione e l‘accesso all\'account, interessi e preferenze personali e altri contenuti personali,
etc.\n <br />

Dati sensibili: Dati Personali che rivelino l\'origine razziale o etnica, le opinioni politiche, le
convinzioni religiose o filosofiche, o l‘appartenenza sindacale, nonché dati genetici, dati biometrici
intesi a identificare in modo univoco una persona fisica, Dati relativi alla salute o alla vita sessuale o
all\'orientamento sessuale della persona. \n <br />

Il mancato conferimento da parte dell’Utente di alcuni Dati potrebbe impedire a questa Applicazione di erogare i propri servizi. <br />

L\'Utente si assume la responsabilità dei Dati Personali di terzi pubblicati o condivisi mediante questa

Applicazione e garantisce di avere il diritto di comunicarli o diffonderli, liberando il Titolare da qualsiasi

responsabilità verso terzi.

Se l\'elaborazione dei Dati Personali si basa sul consenso dell’Utente, lo stesso può revocarlo in qualsiasi

momento. \n <br />

8. Dati e contenuti acquisiti automaticamente durante l\'utilizzo dell\'Applicazione \n <br />

I Dati tecnici: i sistemi informatici e le procedure software preposte al funzionamento di questa
Applicazione possono acquisire, nel corso del loro normale esercizio, alcuni Dati Personali la cui
trasmissione è implicita nell\'uso dei protocolli di comunicazione internet. Si tratta di informazioni
che non sono raccolte per essere associate a soggetti interessati identificati, ma che per la loro
stessa natura, potrebbero, attraverso elaborazioni ed associazioni con Dati detenuti da terzi,
permettere di identificare gli utenti. In questa categoria rientrano gli indirizzi IP, o i nomi di dominio
utilizzati dagli Utenti che si connettono all\'Applicazione, gli indirizzi in notazione URI (Uniform
Resource Identifier) delle risorse richieste, l\'orario della richiesta, il metodo utilizzato nel sottoporre
la richiesta al server, la dimensione del file ottenuto, etc. \n <div />

I Dati di geolocalizzazione: L\'Applicazione può raccogliere Dati sulla posizione, che possono essere
precisi o imprecisi. I Dati precisi sulla posizione possono essere Dati GNSS (Global Navigation
Satellite System, ad esempio quelli GPS), oltre ai Dati che identificano il ripetitore più vicino, gli
hotspot Wi-Fi e bluetooth, comunicati quando si abilitano i prodotti o le funzionalità basati sulla
        posizione. <div /> </string>
</resources>