<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/menu_conferma"
            android:title="@string/conferma_farmaco"/>

        <item
            android:id="@+id/menu_non_conferma"
            android:title="@string/nonconferma_farmaco"/>

        <item
            android:id="@+id/menu_posticipa"
            android:title="@string/posticipa_farmaco"/>
    </group>

    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/menu_info_farmaco"
            android:title="@string/info_farmaco" />
        <item
            android:id="@+id/menu_foto_farmaco"
            android:title="@string/foto_farmaco" />
    </group>

</menu>